--- a/09 march 2022/statements assessment test.ipynb
+++ b/09 march 2022/statements assessment test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df7f134a",
+   "id": "ffa53305",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da910ff9",
+   "id": "a9461332",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb01d76c",
+   "id": "4a538d44",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8db452af",
+   "id": "43131608",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6efcbd76",
+   "id": "81d243ec",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3a867685",
+   "id": "9b2422bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "30c10d5c",
+   "id": "2acc3631",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7ca8903f",
+   "id": "409c3265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1cb08a79",
+   "id": "941304c2",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ea24d1d6",
+   "id": "4fb317c9",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fc9a9ae1",
+   "id": "f5a72014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2f34337d",
+   "id": "4afb60dc",
    "metadata": {},
    "outputs": [
     {
@@ -223,16 +223,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "2fed78f5",
+   "execution_count": 53,
+   "id": "b2cca66c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2355734210.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [52]\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif z%3==0 , z%5==0:\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fizz\n",
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "buzz\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "buzz\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizz\n",
+      "16\n",
+      "17\n",
+      "fizz\n",
+      "19\n",
+      "buzz\n",
+      "fizz\n",
+      "22\n",
+      "23\n",
+      "fizz\n",
+      "buzz\n",
+      "26\n",
+      "fizz\n",
+      "28\n",
+      "29\n",
+      "fizz\n",
+      "31\n",
+      "32\n",
+      "fizz\n",
+      "34\n",
+      "buzz\n",
+      "fizz\n",
+      "37\n",
+      "38\n",
+      "fizz\n",
+      "buzz\n",
+      "41\n",
+      "fizz\n",
+      "43\n",
+      "44\n",
+      "fizz\n",
+      "46\n",
+      "47\n",
+      "fizz\n",
+      "49\n",
+      "buzz\n",
+      "fizz\n",
+      "52\n",
+      "53\n",
+      "fizz\n",
+      "buzz\n",
+      "56\n",
+      "fizz\n",
+      "58\n",
+      "59\n",
+      "fizz\n",
+      "61\n",
+      "62\n",
+      "fizz\n",
+      "64\n",
+      "buzz\n",
+      "fizz\n",
+      "67\n",
+      "68\n",
+      "fizz\n",
+      "buzz\n",
+      "71\n",
+      "fizz\n",
+      "73\n",
+      "74\n",
+      "fizz\n",
+      "76\n",
+      "77\n",
+      "fizz\n",
+      "79\n",
+      "buzz\n",
+      "fizz\n",
+      "82\n",
+      "83\n",
+      "fizz\n",
+      "buzz\n",
+      "86\n",
+      "fizz\n",
+      "88\n",
+      "89\n",
+      "fizz\n",
+      "91\n",
+      "92\n",
+      "fizz\n",
+      "94\n",
+      "buzz\n",
+      "fizz\n",
+      "97\n",
+      "98\n",
+      "fizz\n"
      ]
     }
    ],
@@ -253,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2d923348",
+   "id": "628bd726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "279a509a",
+   "id": "a8a59ba6",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8070a7f",
+   "id": "d7af7341",
    "metadata": {},
    "outputs": [],
    "source": []
